fix!: align tokens with figma variables (#8311)
**Related Issue:** #8310

## Summary

There were some misalignments between figma variables and tokens as well
as some changes to names to better align with the naming schema.

Core tokens are a logical scale
Semantic tokens have meaningful names representing their usage.

BREAKING CHANGE:

- Box-shadow is now shadow
- Core font family tokens use the font name
- Remove unnecessary core tokens line-height, font-size, letter-spacing,
paragraph-spacing as these can be exclusive to semantic and reference
core size tokens
- Core size tokens now use their pixel size in their name
- Border-radius is now corner-radius
- Border-width removed unnecessary tokens none, sm, md, lg
- Success, info, warning, and danger colors are now prefixed with the
name "status"
  -   --color-status-info-hover

--- a/packages/calcite-components/src/components/scrim/scrim.scss
+++ b/packages/calcite-components/src/components/scrim/scrim.scss
@@ -6,7 +6,7 @@
  * @prop --calcite-scrim-background: Specifies the background color of the scrim.
  */
 :host {
-  --calcite-scrim-background: var(--calcite-color-background-transparent-scrim);
+  --calcite-scrim-background: var(--calcite-color-transparent-scrim);
 }
 
 :host {
@@ -39,7 +39,7 @@
   justify-center
   overflow-hidden;
   animation: calcite-scrim-fade-in var(--calcite-internal-animation-timing-medium) ease-in-out;
-  background-color: var(--calcite-scrim-background, var(--calcite-color-background-transparent-scrim));
+  background-color: var(--calcite-scrim-background, var(--calcite-color-transparent-scrim));
 }
 
 .content {
